@@ -46,6 +46,7 @@ psxbarrier01/Makefile
 psxcancel/Makefile
 psxchroot01/Makefile
 psxcleanup/Makefile
+psxcond01/Makefile
 psxenosys/Makefile
 psxfatal01/Makefile
 psxfatal02/Makefile
