@@ -1,3 +1,12 @@
+2009-07-21	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, configure.ac: Add new test to exercise error case for
+	when a task is blocked on a condition variable with one mutex and
+	another task attempts to block on the same condition variable with
+	another mutex.
+	* psxcond01/.cvsignore, psxcond01/Makefile.am, psxcond01/init.c,
+	psxcond01/psxcond01.doc, psxcond01/psxcond01.scn: New files.
+
 2009-07-19	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile.am, configure.ac: Add psxspin02 to exercise case where
